feature_continued_testimony